// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ThirdPartyLookupFormResult renders api data 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Test Form"
    >
      <p>
        primary heading
         - 
        dummy UT
      </p>
      <StandardCard
        title="Test Results"
      >
        <pre>
          [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
        </pre>
      </StandardCard>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
        style={
          Object {
            "marginTop": 20,
          }
        }
        variant="contained"
      >
        New Test Search
      </WithStyles(ForwardRef(Button))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Component ThirdPartyLookupFormResult renders api data when no second field provided 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="label 9"
    >
      <p>
        pf heading 9
         - 
        dummy UT
      </p>
      <StandardCard
        title="Test Results"
      >
        <pre>
          [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
        </pre>
      </StandardCard>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
        style={
          Object {
            "marginTop": 20,
          }
        }
        variant="contained"
      >
        New Test Search
      </WithStyles(ForwardRef(Button))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Component ThirdPartyLookupFormResult should display a blank when the response is blank 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Test Form"
    >
      <p>
        primary heading
         - 
        dummy UT
      </p>
      <StandardCard
        title="Results"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <StandardCard>
            No results found
          </StandardCard>
        </WithStyles(ForwardRef(Grid))>
      </StandardCard>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
        style={
          Object {
            "marginTop": 20,
          }
        }
        variant="contained"
      >
        New Search
      </WithStyles(ForwardRef(Button))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Component ThirdPartyLookupFormResult should display the secondary field when required 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="label 10"
    >
      <p>
        pf heading 10
         - 
        dummy UT
      </p>
      <p>
        sf heading 10
         - 
        123456789
      </p>
      <StandardCard
        title="Test Results"
      >
        <pre>
          [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
        </pre>
      </StandardCard>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
        style={
          Object {
            "marginTop": 20,
          }
        }
        variant="contained"
      >
        New Test Search
      </WithStyles(ForwardRef(Button))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Component ThirdPartyLookupFormResult should not display the secondary field if reportInOutput is not specifically turned on 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="label 8"
    >
      <p>
        PF 8
         - 
        dummy UT
      </p>
      <StandardCard
        title="Test Results"
      >
        <pre>
          [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
        </pre>
      </StandardCard>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
        style={
          Object {
            "marginTop": 20,
          }
        }
        variant="contained"
      >
        New Test Search
      </WithStyles(ForwardRef(Button))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Component ThirdPartyLookupFormResult should show locale-defined message when no results 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Test Form"
    >
      <p>
        primary heading
         - 
        dummy UT
      </p>
      <StandardCard
        title="Test Results"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <StandardCard>
            No test results found
          </StandardCard>
        </WithStyles(ForwardRef(Grid))>
      </StandardCard>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
        style={
          Object {
            "marginTop": 20,
          }
        }
        variant="contained"
      >
        New Test Search
      </WithStyles(ForwardRef(Button))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Component ThirdPartyLookupFormResult should use defaults when locale values are not provided 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Test Form"
    >
      <p>
        primary heading
         - 
        dummy UT
      </p>
      <StandardCard
        title="Results"
      >
        <pre>
          [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
        </pre>
      </StandardCard>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
        style={
          Object {
            "marginTop": 20,
          }
        }
        variant="contained"
      >
        New Search
      </WithStyles(ForwardRef(Button))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
